--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ div.splash div.gradient {
 
 div.splash {
     position: relative;
-
 }
 
 div.splash div.background-image img {
@@ -96,10 +95,10 @@ div.splash div.story-card {
     inset: 0;
     left: 50%;
     margin-left: -327.5px;
+    margin-bottom: 0;
     display: grid;
     align-items: center;
     text-align: center;
-
 }
 
 div.splash h1,
@@ -177,13 +176,17 @@ div.form button {
 section {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 46px;
     padding: 70px 120px;
     align-items: center;
     border-top: 8px solid #222;
+    margin: 0 auto;
 }
 
-section div.texts {
+section div.grp-1 {
+    padding: 0 3rem 0 0;
+}
+
+section div.grp-2 {
     padding: 0 0 0 3rem;
 }
 
@@ -222,9 +225,6 @@ section div.texts p {
 
 }
 
-section:nth-child(even) div.texts {
-    order: 2;
-}
 
 /* 2nd Section */
 section.second {
@@ -261,7 +261,6 @@ section div.download img.gif {
 }
 
 div.text {
-    padding-left: 10px;
     line-height: 20px;
 }
 
@@ -292,30 +291,35 @@ div.text span {
     width: 100%;
 
 }
-section.fourth{
+
+section.fourth {
     border-bottom: 8px solid #222;
 }
 
 /* FAQ Starts */
-div.faq{
+div.faq {
     padding: 70px 45px;
 }
-div.faq h1{
+
+div.faq h1 {
     font-size: 3.125rem;
     text-align: center;
     margin-bottom: 40px;
 }
-div.questions{
+
+div.questions {
     max-width: 820px;
     margin: 0 auto;
     font-size: 1.625rem;
 }
-div.question{
+
+div.question {
     position: relative;
     background-color: #303030;
     margin-bottom: 6px;
 }
-div.question svg{
+
+div.question svg {
     height: 30px;
     width: 30px;
     position: absolute;
@@ -324,39 +328,96 @@ div.question svg{
     transform: rotate(45deg);
     /* transition: all 0.1s ease; */
 }
-div.question .header{
+
+div.question .header {
     display: block;
     padding: 20px 30px;
     border: 1px solid #000;
     cursor: pointer;
 }
-div.question div.answer{
-    padding: 0 30px; 
+
+div.question div.answer {
+    padding: 0 30px;
     max-height: 0;
     overflow: hidden;
     transition: all 0.1s ease;
 }
 
 /* checkbox */
-div.question input[type="checkbox"]{
+div.question input[type="checkbox"] {
     display: none;
 }
-div.question input[type="checkbox"]:checked ~ div.answer{
+
+div.question input[type="checkbox"]:checked~div.answer {
     padding: 30px;
     max-height: 600px;
-    
+
 }
-div.question input[type="checkbox"]:checked ~ .header svg{
+
+div.question input[type="checkbox"]:checked~.header svg {
     transform: rotate(0deg);
 }
 
-div.faq div.form{
+div.faq div.form {
     text-align: center;
     max-width: 700px;
     margin: 70px auto;
 }
 
 /* Media Queries */
-@media only screen and(min-width:949px){
+@media screen and (min-width: 740px) {
+    h1 {
+        font-size: 38px;
+    }
+}
 
+@media only screen and (min-width:0px) and (max-width:949px) {
+    section {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        text-align: center;
+        padding: 50px 5%;
+    }
+
+    section div.texts {
+        padding: 0px;
+    }
+    
+}
+
+@media only screen and (max-width:549px) {
+    h1 {
+        margin: 0 0 .4em;
+    }
+
+    section div.texts h1,
+    div.faq h1 {
+        font-size: 1.625rem;
+    }
+
+    section div.texts p,
+    div.questions {
+        font-size: 1.25rem;
+    }
+
+
+}
+
+@media only screen and (min-width:550px) and (max-width:949px) {
+
+    section div.texts h1,
+    div.faq h1 {
+        font-size: 2.5rem;
+    }
+
+    section div.texts p,
+    div.questions {
+        font-size: 1.25rem;
+    }
+}
+
+@media only screen and (min-width:950px) {
+    section:nth-child(even) div.texts {
+        order: 2;
+    }
 }
